# lotto-manager-gcp

./: .gitignore  README.md  Run Manager.bat  Selected Numbers.xlsx  pyproject.toml  requirements.txt  run.py  selected_numbers.csv  selected_numbers.xlsx
.github/workflows/: ci.yml
cloud/: cloud-func-build.yaml
cloud/functions/run_manager/: variables.txt
cloud/functions/run_manager/src/: main.py  requirements.txt  variables.txt
cloud/functions/run_manager/tests/: test_bigquery.py  test_check_matches.py  test_cumulate_results.py  test_scrape_results.py  test_tools.py
cloud/scripts/: gcp-github-triggers.sh  gcp-setup.sh
cloud_utils/: authentication.py  handle_requests.py  logging.py
functions/publish_message/: variables.txt
functions/publish_message/src/: main.py  requirements.txt
functions/run_manager/: variables.txt
functions/run_manager/src/: main.py  requirements.txt
functions/run_manager/tests/: test_check_matches.py
functions/run_manager_between/: variables.txt
functions/run_manager_between/src/: main.py  requirements.txt  utilities.py
manager/: __init__.py  check_matches.py  cumulate_results.py  get_numbers.py  gui.py  scrape_results.py  tools.py  writer.py
manager/bigquery/: __init__.py  queries.py  read.py  write.py
scripts/: cloud-func-build.yaml  gcp-github-triggers.sh  gcp-setup.sh
tests/: acceptance_test_gui.md  test_cumulate_results.py  test_get_numbers.py  test_scrape_results.py  test_tools.py
tests/resource/: draw_history.html  draw_history_wrong_csv_link.html  prize_breakdown.html
tests/test_bigquery/: conftest.py  test_bigquery_integration.py  test_read.py
(+9 files in other folders)
