[tool.poetry]
name = "lotto-manager-gcp"
version = "0.1.0"
description = ""
authors = ["ghagintonbear"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
pandas-gbq = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
google-cloud-bigquery = "^2.6.1"
google-cloud-pubsub = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
